LPS-81565 Handle new exception

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/content/Language.properties
@@ -61,6 +61,7 @@ the-visibility-expression-x-set-for-field-x-is-invalid=The visibility expression
 there-are-no-element-sets=There are no element sets. Click on the plus button to add the first one.
 there-are-no-forms=There are no forms. Click on the plus button to add the first one.
 this-form-not-available-or-it-was-not-published=This form is not available or it was not published.
+unable-to-export-form-entries=Unable to export the entries for the selected form.
 unable-to-render-the-selected-form=Unable to render the selected form.
 unable-to-retrieve-the-definition-of-the-selected-form=Unable to retrieve the definition of the selected form.
 unable-to-retrieve-the-layout-of-the-selected-form=Unable to retrieve the layout of the selected form.
