LPS-90841 Update dependencies

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-field-type/package.json
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-field-type/package.json
@@ -43,10 +43,13 @@
 	},
 	"dependencies": {
 		"autobind-decorator": "^2.1.0",
-		"clay-checkbox": "^2.7.0",
-		"clay-dropdown": "^2.7.0",
-		"clay-icon": "^2.7.0",
-		"clay-radio": "^2.7.0",
+		"clay-button": "^2.9.0",
+		"clay-checkbox": "^2.9.0",
+		"clay-dropdown": "^2.9.0",
+		"clay-icon": "^2.9.0",
+		"clay-label": "^2.9.0",
+		"clay-link": "^2.9.0",
+		"clay-radio": "^2.9.0",
 		"incremental-dom-string": "0.0.2",
 		"metal-component": "^2.14.0",
 		"metal-drag-drop": "^3.2.2",
