--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-field-type/.npmbundlerrc
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-field-type/.npmbundlerrc
@@ -5,10 +5,13 @@
 				"/": ">=2.0.0"
 			},
 			"frontend-taglib-clay": {
-				"clay-checkbox": "^2.2.0",
-				"clay-dropdown": ">=2.1.12",
-				"clay-icon": "^2.2.0",
-				"clay-radio": "^2.2.0"
+				"clay-button": "^2.9.0",
+				"clay-checkbox": "^2.9.0",
+				"clay-dropdown": "^2.9.0",
+				"clay-icon": "^2.9.0",
+				"clay-label": "^2.9.0",
+				"clay-link": "^2.9.0",
+				"clay-radio": "^2.9.0"
 			},
 			"frontend-js-metal-web": {
 				"metal": ">=2.16.5",
